--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "nodemailer",
   "version": "1.0.0",
   "description": "email sending service",
-  "main": "index.js",
+  "main": "nodemailer.ts",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon -e ts  --exec \"npm run compile\"",
+    "compile": "tsc && node src/nodemailer.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -17,8 +21,11 @@
   },
   "homepage": "https://github.com/LidiaMil/nodemailer#readme",
   "dependencies": {
+    "@types/node": "^17.0.21",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.6.2"
   }
 }
