--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "baseUrl": "./src",
     "esModuleInterop": true,
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts", "src/nodemailer.js", "src/config/config.js"],
   "exclude": ["node_modules"]
 }
